docs: 重构 synchronized 文档以问题为主线并精简内容